# DeepHpx

./: LICENSE  README.md  pyproject.toml
examples/: 00_smoke_read_map.py  01_build_graph.py  02_chebconv_forward.py  03_healpix_pooling_smoke.py  04_encoder_forward.py  05_ili_sbi_train_healpix.py  06_ili_lampe_train_streaming_healpix.py  atmo_plus_astro_counts_Ebin0.fits
notebooks/: 00_example.ipynb  00_full_sbi_hpx_example.ipynb
src/deephpx/: __init__.py
src/deephpx/graph/: __init__.py  adjacency.py  cache.py  laplacian.py  neighbors.py
src/deephpx/healpix/: __init__.py  geometry.py  io.py  ordering.py
src/deephpx/ili/: __init__.py  dataset.py  embedding.py  loader.py  torch_loader.py  train.py
src/deephpx/nn/: __init__.py  chebyshev.py  encoder.py  healpix_pooling.py
tests/: conftest.py  test_chebyshev.py  test_encoder.py  test_geometry.py  test_healpix_pooling.py  test_ili_loader.py  test_io_numpy.py  test_laplacian.py  test_neighbors.py  test_ordering.py  test_streaming_dataset.py  test_torch_loader_wrapper.py
